--- a/style.css
+++ b/style.css
@@ -118,8 +118,7 @@ header{
 }
 
 
-.text span{
-    color: rgb(209, 209, 207);
+.text span{ color: rgb(209, 209, 207);
     display: inline-block;
     position: relative;
     text-shadow: 0 20px 30px rgba(0, 0, 0, 0.3);
